# router/index.js
@@ -1,4 +1,5 @@
 module.exports = function(app) {  
   // here we list our individual sets of routes to use
-  require('./routes/services')(app);
+  require('./routes/ADWservices')(app);
+  require('./routes/ATPservices')(app);  
 };
